--- a/resetpass.html
+++ b/resetpass.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="resetpass.css">
 </head>
 
@@ -16,7 +16,7 @@
             action="https://script.google.com/macros/s/AKfycbyoovMtW4NJ0a8N5OqLEfZbiQeyXLPxAmCSmoxJhlxudSag-bceoLZqOiChxNSq2i1T1Q/exec"
             method="post">
             <div class="input-icon">
-                <i class='bx bx-envelope'></i>
+                <i class="fa-solid fa-envelope"></i> <!-- Email Icon -->
                 <input type="email" name="email" placeholder="Email Address" required>
             </div>
             <button type="submit">Reset Password</button>
